<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>domain_bridge</name>
  <version>0.4.0</version>
  <description>ROS 2 Domain Bridge</description>
  <maintainer email="jacob@openrobotics.org">Jacob Perron</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>rcpputils</depend>
  <depend>rmw</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>yaml-cpp</depend>
  <depend>zstd_vendor</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>example_interfaces</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>
  <test_depend>test_msgs</test_depend>

  <!-- Ensure the following Tier 1 RMW implementations are available for testing -->
  <test_depend>rmw_connext_cpp</test_depend>
  <test_depend>rmw_cyclonedds_cpp</test_depend>
  <test_depend>rmw_fastrtps_cpp</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
